# hydra-github-jobsets-generator

./: .gitignore  README.md  flake.nix
.github/: PULL_REQUEST_TEMPLATE
.github/workflows/: ci.yml  update.yml
jobset/: generate.nix
jobset-generator/: Cargo.toml  default.nix  jobsets-builder.py
jobset-generator/example/: example-config.json  example-inputs.json  example-prs.json
jobset-generator/src/: cli.rs  config.rs  github_types.rs  hydra_types.rs  main.rs  pr_builder.rs  pyproject.toml
jobset-generator/src/hydra_github_jobset_generator/: cli.py  config.py  pr_builder.py
python-jobset-generator/: default.nix
python-jobset-generator/src/hydra_github_jobset_generator/: cli.py  github_types.py  hydra_types.py
terraform/: main.tf  providers.tf
