[tool.poetry]
name = "hydra_github_jobset_generator"
version = "0.1.0"
description = "Declaratively generate jobsets for all a project's branches and PRs."
authors = ["Graham Christensen <graham@determinate.systems>"]

[tool.poetry.scripts]
jobset_generator = "hydra_github_jobset_generator.cli:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
